# AI-Hedge-Fund-Agent

./: README.md  app.py  database.py  main_scalable.py  pyproject.toml  requirements.txt  screener.py  trading_bot.db  trading_decision_AAPL.md  trading_decision_MSFT.md  trading_decision_TSLA.md
src/ai_trading_agent/: crew.py  main.py
src/ai_trading_agent/config/: agents.yaml  tasks.yaml
src/ai_trading_agent/tools/: financial_tools.py  stocktwits_sentiment_tool.py
