[project]
name = "ai_trading_agent"
version = "0.1.0"
description = "ai_trading_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
ai_trading_agent = "ai_trading_agent.main:run"
run_crew = "ai_trading_agent.main:run"
train = "ai_trading_agent.main:train"
replay = "ai_trading_agent.main:replay"
test = "ai_trading_agent.main:test"
run_with_trigger = "ai_trading_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
